# banzai-nres

./: .dockerignore  .gitignore  .readthedocs.yml  .travis.yml  CHANGES.md  Dockerfile  ExampleReduction.ipynb  Jenkinsfile  MANIFEST.in  README.md  docker-compose.yml  pyproject.toml  pytest.ini  setup.cfg  setup.py  tox.ini
.github/actions/run-e2e-step/: action.yaml
.github/workflows/: ci_tests.yml  docs.yaml  e2e-tests.yaml  unit-tests.yaml
banzai_nres/: __init__.py  background.py  bias.py  blaze.py  calibrations.py  classify.py  continuum.py  coordinate_transform.py  dark.py  dbs.py  error_propagation.py  extract.py  extraction.py  fiber_profile.py  fibers.py  fitting.py  flats.py  frames.py  good_regions.py  images.py  main.py  new_traces.py  pdf.py  phoenix.py  profile.py  rv.py  settings.py  traces.py  wavelength.py
banzai_nres/data/: ThAr_atlas_ESO_vacuum.txt  munge_phoenix_models.py
banzai_nres/qc/: __init__.py  qc_science.py  qc_wavelength.py  traces_checker.py  wavelength.py  wavelength_solution_checker.py
banzai_nres/tests/: __init__.py  adding_traces_to_images_utils.py  e2e-k8s.yaml  test_array_utils.py  test_background_subtraction.py  test_bias.py  test_bias_maker.py  test_blaze.py  test_blind_trace_maker.py  test_classify.py  test_continuum.py  test_continuum_utils.py  test_dark.py  test_dbs.py  test_e2e.py  test_extract.py  test_extraction.py  test_fiber_profile_maker.py  test_fibers_state.py  test_fitting.py  test_flats.py  test_gc_distance.py  test_image.py  test_main.py  test_munge.py  test_new_traces.py  test_profile.py  test_qc_science.py  test_qc_wavelength.py  test_runtime_utils.py  test_rv.py  test_settings.py  test_telluric.py  test_trace_maker.py  test_trace_utils.py  test_traces.py  test_wavelength.py  utils.py
banzai_nres/tests/data/: configdb_example.json  mock_simbad_response.ecsv  test_lake_response_elp_20171122.json  test_lake_response_elp_20171215.json  test_lake_response_elp_20180109.json  test_lake_response_lsc_20180215.json  test_lake_response_lsc_20180228.json  test_lake_response_lsc_20180307.json  test_lake_response_lsc_20180310.json  test_lake_response_lsc_20180311.json  test_lake_response_lsc_20180313.json  test_lake_response_lsc_20180328.json  test_obs_portal_response_elp_20171122.json  test_obs_portal_response_elp_20171215.json  test_obs_portal_response_elp_20180109.json  test_obs_portal_response_lsc_20180215.json  test_obs_portal_response_lsc_20180228.json  test_obs_portal_response_lsc_20180307.json  test_obs_portal_response_lsc_20180310.json  test_obs_portal_response_lsc_20180311.json  test_obs_portal_response_lsc_20180313.json  test_obs_portal_response_lsc_20180328.json
banzai_nres/tests/k8s/: e2e-k8s.yaml  kustomization.yaml
banzai_nres/utils/: NRES_class_utils.py  array_utils.py  banzai_spoofer.py  continuum_utils.py  coordinate_utils.py  db_utils.py  extract_utils.py  extraction_utils.py  fiber_profile_utils.py  file_utils.py  fits_utils.py  good_regions_utils.py  image_utils.py  munge_utils.py  new_trace_utils.py  phoenix_utils.py  runtime_utils.py  tellurics.py  trace_utils.py  wavelength_utils.py
docs/: README.rst  conf.py  index.rst
docs/banzai_nres/: ExampleReduction.ipynb  classification-rv.rst  data-products.rst  development.rst  idl-differences-data-products.rst  idl-differences.rst  index.rst  install.rst  wavelength-solution.rst
helm-chart/banzai-nres/: Chart.yaml  README.md  requirements.yaml  values-dev.yaml  values-prod.yaml  values-reprocessing.yaml  values.yaml
helm-chart/banzai-nres-e2e/: Chart.yaml  values.yaml
helm-chart/banzai-nres-e2e/templates/: NOTES.txt  _helpers.tpl  e2e_tests.yaml  pvc.yaml
helm-chart/banzai-nres/templates/: _helpers.tpl  db-instrument-update.yaml  listener.yaml  stacker.yaml  workers.yaml
