[build-system]
requires = ["setuptools>=61", "cython", "extension-helpers", "numpy>=2"]
build-backend = "setuptools.build_meta"

[project]
name = "banzai-nres"
version = "1.3.0"
requires-python = ">=3.11,<4"
description = "BANZAI Data Reduction for NRES spectra"
readme = "docs/README.rst"
authors = [
    { name = "Curtis McCully", email = "cmccully@lco.global" },
    { name = "G. Mirek Brandt"},
    { name = "Marshall Johnson"}
]
license = {text="GPL-3.0-or-later"}
keywords = ["astronomy", "spectroscopy", "data reduction", "Las Cumbres Observatory"]
urls = { "Documentation" = "https://banzai-nres.readthedocs.io/", "Source" = "https://github.com/lcogt/banzai-nres" }

dependencies = [
    "lco-banzai @ git+https://github.com/lcogt/banzai.git@1.35.2",
    "statsmodels",
    "xwavecal @ git+https://github.com/lcogt/xwavecal.git@0.2.0",
    "astroquery",
    "pandas>=2",
    "matplotlib",
    'sep',
    "astropy>=7.0",
    "photutils>=3.0",
]
[project.optional-dependencies]
test = [
    "pytest>=4.0",
    "coverage",
    "pytest-astropy",
    "mock"
]
docs = [
    "sphinx-astropy", 
    "sphinx-pyproject",
    "sphinx_rtd_theme",
    "nbsphinx",
    "ipykernel",
]
style = ["pycodestyle"]

[tool.setuptools.packages.find]
where = ["."]
include = ["banzai_nres*"]

[tool.uv.sources]
torch = [
    { index = "pytorch-cpu", marker = "sys_platform != 'darwin'" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[project.scripts]
banzai_nres_reduce_night="banzai_nres.main:reduce_night"
banzai_nres_run_realtime_pipeline="banzai_nres.main:nres_run_realtime_pipeline"
banzai_nres_start_stacking_scheduler="banzai_nres.main:nres_start_stacking_scheduler"
banzai_nres_make_master_calibrations="banzai_nres.main:nres_make_master_calibrations"
banzai_nres_add_bpm="banzai_nres.main:add_bpm"
banzai_nres_populate_bpms="banzai_nres.main:add_bpms_from_archive"
banzai_nres_munge_phoenix="banzai_nres.main:munge_phoenix_files"
banzai_nres_create_db="banzai_nres.main:create_db"
banzai_nres_populate_phoenix_models="banzai_nres.main:populate_phoenix_models"
