[metadata]
name = banzai_nres
author = Curtis McCully, G. Mirek Brandt, Marshall Johnson
author_email = cmccully@lco.global
license = GNU GPL v3+
license_file = licenses/LICENSE.rst
url = https://lcogt.github.io/banzai-nres/
description = BANZAI Data Reduction Pipeline for NRES
long_description = file: README.md
long_description_content_type = text/markdown
edit_on_github = False
github_project = LCOGT/banzai-nres

[options]
zip_safe = False
packages = find:
python_requires = >=3.7
setup_requires = setuptools_scm
install_requires =
    banzai @ git+https://github.com/lcogt/banzai.git
    numpy>=1.13
    astropy>=4.1
    statsmodels
    xwavecal>=0.1.12
    scipy>=1.3.2,<2
    photutils==0.7.2
    boto3
    astroquery
    vine==1.3.0
    pandas>=1.1,<2
    matplotlib


[options.entry_points]
console_scripts =
    banzai_nres_reduce_night=banzai_nres.main:reduce_night
    banzai_nres_run_realtime_pipeline=banzai_nres.main:nres_run_realtime_pipeline
    banzai_nres_start_stacking_scheduler=banzai_nres.main:nres_start_stacking_scheduler
    banzai_nres_make_master_calibrations=banzai_nres.main:nres_make_master_calibrations
    banzai_nres_add_bpm=banzai_nres.main:add_bpm
    banzai_nres_populate_bpms=banzai_nres.main:add_bpms_from_archive
    banzai_nres_munge_phoenix=banzai_nres.main:munge_phoenix_files
    banzai_nres_create_db=banzai_nres.main:create_db
    banzai_nres_populate_phoenix_models=banzai_nres.main:populate_phoenix_models

[options.extras_require]
test =
    pytest>=3.5
    pytest-astropy
    pytest-runner
    mock

docs =
    sphinx-astropy
    sphinx_rtd_theme
    nbsphinx
    ipykernel

[options.package_data]
banzai_nres =
    data/*
    tests/data/*

[tool:pytest]
testpaths = "banzai_nres" "docs"
astropy_header = true
doctest_plus = enabled
text_file_format = rst
addopts = --doctest-rst
log_cli = True
log_level = info
log_cli_level = info
markers =
    e2e
    integration
    master_bias
    master_dark
    master_flat
    master_arc
    science_frames

[coverage:run]
omit =
    banzai_nres/_astropy_init*
    banzai_nres/conftest.py
    banzai_nres/*setup_package*
    banzai_nres/tests/*
    banzai_nres/*/tests/*
    banzai_nres/extern/*
    banzai_nres/version*
    */banzai_nres/_astropy_init*
    */banzai_nres/conftest.py
    */banzai_nres/*setup_package*
    */banzai_nres/tests/*
    */banzai_nres/*/tests/*
    */banzai_nres/extern/*
    */banzai_nres/version*

[coverage:report]
exclude_lines =
    # Have to re-enable the standard pragma
    pragma: no cover
    # Don't complain about packages we have installed
    except ImportError
    # Don't complain if tests don't hit assertions
    raise AssertionError
    raise NotImplementedError
    # Don't complain about script hooks
    def main\(.*\):
    # Ignore branches that don't pertain to this version of Python
    pragma: py{ignore_python_version}
    # Don't complain about IPython completion helper
    def _ipython_key_completions_
